# pmpd

./: LICENSE.md  README.md  package-info.json.in
help/: pmpd.link.maxhelp  pmpd.link2D.maxhelp  pmpd.link3D.maxhelp  pmpd.mass.maxhelp  pmpd.mass2D.maxhelp  pmpd.mass3D.maxhelp  pmpd.maxhelp  pmpd.s.maxhelp  string.maxpat
patchers/: chaos2D.maxpat  string.maxpat
source/include/: pmpd_translate.h
source/projects/pmpd/: CMakeLists.txt  pmpd.c  pmpd.cpp  pmpd.h  pmpd_core.h  pmpd_deprecated.h  pmpd_get.h  pmpd_list.h  pmpd_set.h  pmpd_stat.h  pmpd_tab.h  pmpd_test.h  pmpd_various.h
source/projects/pmpd.link/: pmpd.link.cpp
source/projects/pmpd.link2D/: pmpd.link2D.cpp
source/projects/pmpd.link3D/: pmpd.link3D.cpp
source/projects/pmpd.mass/: CMakeLists.txt  pmpd.mass.cpp
source/projects/pmpd.mass2D/: CMakeLists.txt  pmpd.mass2D.cpp
source/projects/pmpd.mass3D/: pmpd.mass3D.cpp
source/projects/pmpd.s/: pmpd.s.cpp
source/projects/pmpd/c/: CMakeLists.txt  pmpd_core.c  pmpd_get.c  pmpd_set.c  pmpd_stat.c  pmpd_tab.c  pmpd_test.c  pmpd_various.c
